# omnihedron

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md
.claude/: CLAUDE.md
.github/workflows/: docker-publish.yml  docs.yml  fmt.yml  integration-tests.yml
docker/: Dockerfile  Dockerfile.ci  docker-compose.ci.yml  docker-compose.yml  prometheus.yml
docker/grafana/dashboards/: omnihedron.json
docker/grafana/provisioning/dashboards/: dashboard.yml
docs/: next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
docs/.source/: browser.ts  server.ts
docs/content/docs/: api-reference.mdx  changelog.mdx  configuration.mdx  deployment.mdx  docker.mdx  historical-queries.mdx  how-it-works.mdx  index.mdx  installation.mdx  meta.json  migration.mdx  naming-conventions.mdx  performance.mdx  schema-generation.mdx  sql-patterns.mdx  testing.mdx
docs/src/app/: layout.config.tsx  layout.tsx  page.tsx
docs/src/lib/: source.ts
scripts/: bench_compare.sh  create_fixture.sh  hey_blast.sh  query_blast.sh  run_bench.sh  run_integration_tests.sh  setup_db.sh  start_services.sh  stop_services.sh
src/: config.rs  graphiql.html  main.rs  metrics.rs  server.rs
src/db/: mod.rs  pool.rs  schema_discovery.rs  stmt_cache.rs
src/hot_reload/: listener.rs  mod.rs
src/introspection/: mod.rs  model.rs  queries.rs  types.rs
src/resolvers/: aggregates.rs  connection.rs  dataloader.rs  metadata.rs  mod.rs  relations.rs  search.rs  single.rs
src/schema/: aggregates.rs  builder.rs  cursor.rs  filters.rs  inflector.rs  metadata.rs  mod.rs  subscriptions.rs
src/sql/: builder.rs  filter.rs  mod.rs  pagination.rs  search.rs
src/validation/: aliases.rs  batch.rs  complexity.rs  depth.rs  mod.rs
tests/: integration_test.rs  test_aggregates.rs  test_basics.rs  test_filters.rs  test_historical.rs  test_limits.rs  test_numeric.rs  test_ordering.rs  test_pagination.rs  test_relations.rs  test_search.rs  test_smart_tags.rs  test_type_coverage.rs
tests/common/: mod.rs
tests/fixtures/: test_db.sql  type_coverage.sql
(+2 files in other folders)
